[package]
name = "gi-cutscenes-rs"
version = "0.1.0"
edition = "2021"
description = "A command line program playing with the cutscene files (USM) from Genshin Impact, reimplemented in Rust."
categories = [ "command-line-tools" ]
keywords = [ "cli", "games", "utility" ]
license = "GPL 3.0"
repository = "https://github.com/Lymkwi/gi-cutscenes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
serde_json = "1.0.81"
serde = { version = "1.0.81", features = ["derive"] }